<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/inputTextLayout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/zone_tv">
        <EditText android:id="@+id/zone_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/zone_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/inputTextLayout"
        android:id="@+id/date_tv"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/zone_tv"
        android:layout_alignParentStart="true">
        <EditText android:id="@+id/date_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/date_hint" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone_search_btn"
        android:id="@+id/search_zone_btn"
        android:layout_below="@+id/zone_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_zone_btn"
        android:gravity="center">
        <ProgressBar
            android:id="@+id/progress_bar_zonetab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_lv"
            android:scrollbars="vertical"
            android:choiceMode="none"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="2dp"
            android:clipToPadding="true"/>
    </RelativeLayout>
</RelativeLayout>
