<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="4"
    android:layout_column="2"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:elevation="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Ebola"
        android:textSize="22dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/disease_tv"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:textSize="20dp"
        android:id="@+id/level_tv"
        android:gravity="center"
        android:textColor="#000000"
        android:background="@drawable/rounded_corner"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_row="0"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:textColor="#000000"
        android:textSize="15dp"
        android:id="@+id/location_date_tv"
        android:layout_marginLeft="10dp"
        android:layout_row="1"
        android:layout_column="0" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/twitter_iv"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/ic_twitter"
        android:scaleType="fitXY"
        android:contentDescription="@string/twitter_icon_description" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/news_iv"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/ic_news"
        android:scaleType="fitXY"
        android:contentDescription="@string/newspaper_icon_description" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/cdc_iv"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/ic_cdc"
        android:scaleType="fitXY"
        android:contentDescription="@string/cdc_icon_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:textColor="#000000"
        android:id="@+id/twitter_tv"
        android:layout_marginTop="10dp"
        android:layout_row="0"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:textColor="#000000"
        android:id="@+id/news_tv"
        android:layout_row="1"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:textColor="#000000"
        android:id="@+id/cdc_tv"
        android:layout_row="2"
        android:layout_column="3" />

</GridLayout>
